--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/pilz_industrial_motion_planner_testutils
-	previous = 
-	base = 803cf65fc
+	previous = 803cf65fc
+	base = 1492e2303
 	trim = 
 	trimbase = 
