--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_setup_srdf_plugins
-	previous = 
-	base = 4add6efed
+	previous = 4add6efed
+	base = 9ade7f879
 	trim = 
 	trimbase = 
