--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_setup_framework
-	previous = 
-	base = a950a9c14
+	previous = a950a9c14
+	base = 5c00139d0
 	trim = 
 	trimbase = 
