--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_robot_interaction
-	previous = 
-	base = cb3ab5129
+	previous = cb3ab5129
+	base = 06f460327
 	trim = 
 	trimbase = 
