--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/pilz_industrial_motion_planner
-	previous = 
-	base = cea1a0bc3
+	previous = cea1a0bc3
+	base = 4741637d8
 	trim = 
 	trimbase = 
