--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_configs_utils
-	previous = 
-	base = 6546bdc7c
+	previous = 6546bdc7c
+	base = 3da24b552
 	trim = 
 	trimbase = 
