--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros
-	previous = 
-	base = 5cb68f887
+	previous = 5cb68f887
+	base = 788ddd7e3
 	trim = 
 	trimbase = 
