--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_common
-	previous = 
-	base = 4a5ab6327
+	previous = 4a5ab6327
+	base = 6fc0e618c
 	trim = 
 	trimbase = 
