--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_resources_prbt_pg70_support
-	previous = 
-	base = b37e6007d
+	previous = b37e6007d
+	base = 23e3d7e8f
 	trim = 
 	trimbase = 
