--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_setup_controllers
-	previous = 
-	base = 0e59b45f2
+	previous = 0e59b45f2
+	base = 12c3a52b8
 	trim = 
 	trimbase = 
