--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_simple_controller_manager
-	previous = 
-	base = 1d6c72e5c
+	previous = 1d6c72e5c
+	base = 409338e42
 	trim = 
 	trimbase = 
