--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_setup_app_plugins
-	previous = 
-	base = a0a277a5a
+	previous = a0a277a5a
+	base = 20f3c1e87
 	trim = 
 	trimbase = 
