--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_runtime
-	previous = 
-	base = 61f32debe
+	previous = 61f32debe
+	base = f24b1382a
 	trim = 
 	trimbase = 
