--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_kinematics
-	previous = 
-	base = 3f6fbed9d
+	previous = 3f6fbed9d
+	base = 5a229719d
 	trim = 
 	trimbase = 
