--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_visualization
-	previous = 
-	base = a72a616e2
+	previous = a72a616e2
+	base = 71ab2edf0
 	trim = 
 	trimbase = 
