--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_planners
-	previous = 
-	base = cf35e22ff
+	previous = cf35e22ff
+	base = ad19b4e7a
 	trim = 
 	trimbase = 
