--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_servo
-	previous = 
-	base = 742541ff6
+	previous = 742541ff6
+	base = f952647b2
 	trim = 
 	trimbase = 
