--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/chomp_motion_planner
-	previous = 
-	base = 130e2cfc5
+	previous = 130e2cfc5
+	base = 8ee8ab4d4
 	trim = 
 	trimbase = 
