--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_planning_interface
-	previous = 
-	base = e673c6469
+	previous = e673c6469
+	base = c1577cafc
 	trim = 
 	trimbase = 
