--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_planners_chomp
-	previous = 
-	base = 1098caf32
+	previous = 1098caf32
+	base = 31e8aba6d
 	trim = 
 	trimbase = 
