--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_warehouse
-	previous = 
-	base = 4aedfa93b
+	previous = 4aedfa93b
+	base = f302885d9
 	trim = 
 	trimbase = 
