--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_occupancy_map_monitor
-	previous = 
-	base = 95289b7a7
+	previous = 95289b7a7
+	base = 526eb8a08
 	trim = 
 	trimbase = 
