--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_planners_ompl
-	previous = 
-	base = 26a744d32
+	previous = 26a744d32
+	base = 9e0011f91
 	trim = 
 	trimbase = 
