--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_perception
-	previous = 
-	base = c73d07533
+	previous = c73d07533
+	base = 714721e14
 	trim = 
 	trimbase = 
