--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_plugins
-	previous = 
-	base = 67015b1ee
+	previous = 67015b1ee
+	base = f6952f267
 	trim = 
 	trimbase = 
