--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_setup_assistant
-	previous = 
-	base = 9e9843149
+	previous = 9e9843149
+	base = 54c119806
 	trim = 
 	trimbase = 
