--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_core
-	previous = 
-	base = 57063a605
+	previous = 57063a605
+	base = 0806b1c0e
 	trim = 
 	trimbase = 
