--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_resources_prbt_ikfast_manipulator_plugin
-	previous = 
-	base = 7a8982f30
+	previous = 7a8982f30
+	base = 1fa512eac
 	trim = 
 	trimbase = 
