--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_hybrid_planning
-	previous = 
-	base = 436bd6d0d
+	previous = 436bd6d0d
+	base = 24ee6270c
 	trim = 
 	trimbase = 
