--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_planning
-	previous = 
-	base = e5e0c65ff
+	previous = e5e0c65ff
+	base = ea2a74382
 	trim = 
 	trimbase = 
