--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_benchmarks
-	previous = 
-	base = 4c0f5bad4
+	previous = 4c0f5bad4
+	base = af09e906f
 	trim = 
 	trimbase = 
