--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_move_group
-	previous = 
-	base = d61102968
+	previous = d61102968
+	base = 5b4e92903
 	trim = 
 	trimbase = 
