--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_ros_control_interface
-	previous = 
-	base = 85687d6ae
+	previous = 85687d6ae
+	base = 207c45c50
 	trim = 
 	trimbase = 
