--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit
-	previous = 
-	base = c8de72da2
+	previous = c8de72da2
+	base = d8a0a6497
 	trim = 
 	trimbase = 
