--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_resources_prbt_moveit_config
-	previous = 
-	base = a6170bc43
+	previous = a6170bc43
+	base = d9b190ddf
 	trim = 
 	trimbase = 
