--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = ea7fb23a8
+	base = 7565622b7
 	trim = moveit
-	trimbase = 
+	trimbase = ea7fb23a8
