--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 972ec9a5a
+	base = ab40f5ade
 	trim = moveit_common
-	trimbase = 
+	trimbase = 972ec9a5a
