--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 8adbc727a
+	base = be88f25e1
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 8adbc727a
