--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = fd4afb50f
+	base = ddd0db78a
 	trim = moveit_core
-	trimbase = 
+	trimbase = fd4afb50f
