--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 0b1e50dff
+	base = 194f1b250
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 0b1e50dff
