--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 0d982af7b
+	base = 78c3630eb
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = 0d982af7b
