--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = e141082d9
+	base = ef2901f28
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = e141082d9
