--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 043ad57ed
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = e1354410e
+	trimbase = 
