--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 5b316b4c6
+	base = 8af4dfba5
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 
+	trimbase = 5b316b4c6
