--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = dc91c0347
+	base = 47f5ef145
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = dc91c0347
