--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 83daf4829
+	base = 3b8300eb9
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 83daf4829
