--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 1fd3308cf
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 8daf0fc4c
+	trimbase = 
