--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = f7417a4ed
+	base = a335917ce
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = f7417a4ed
