--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 7a76c5076
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 407108762
+	trimbase = 
