--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = e16f23c7b
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 40546fb9f
+	trimbase = 
