--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 67ce85f59
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 8b5a7e007
+	trimbase = 
