--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = d15a6b4d4
+	base = 767749d15
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = d15a6b4d4
