--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 8a9348349
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 563863700
+	trimbase = 
