--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = a59dfa960
+	base = da98f5b9d
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = a59dfa960
