--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = dccddeed1
+	base = 4bd47d660
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = dccddeed1
