--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 9ffa4e719
+	base = cd05d6755
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = 9ffa4e719
