--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 09fef8eb8
+	base = 1d7fc806f
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = 09fef8eb8
