--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 5a9d3f2fa
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 89f80e3d7
+	trimbase = 
