--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 4156c0d51
+	base = ad6909610
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 4156c0d51
