--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 9d550a98e
+	base = 54d34ab5e
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = 9d550a98e
