--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = e3091bde7
+	base = ae54f68e1
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = e3091bde7
