--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 8d9461941
+	base = 057898369
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = 8d9461941
