--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 4051d996e
+	base = bfea8935d
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = 4051d996e
