--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 63d66035d
+	base = 6d2eac042
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 63d66035d
