--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 4e4c2b4bd
+	base = 815f25451
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 4e4c2b4bd
