--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 6c6036698
+	base = 1d4100031
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 6c6036698
