--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 8a0a44ca1
+	base = 2273dc8ab
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = 8a0a44ca1
