--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = ea303cd86
+	base = 9a1fd2d62
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = ea303cd86
