--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = b66da0342
+	base = bf05666a4
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = b66da0342
