--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = b0846fe7b
+	base = b8ec1a5d9
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = b0846fe7b
