--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = ccd9c708b
+	base = 227b53b25
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = ccd9c708b
