--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 58cdae0bc
+	base = f70f8f36a
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = 58cdae0bc
