--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = d0af8bccd
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 45b8e64e6
+	trimbase = 
