--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = ca793eae0
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = d12bf4003
+	trimbase = 
