--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = 90debc4d7
+	base = 70e1a3f34
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = 90debc4d7
