--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 38f16b164
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = f02260bc3
+	trimbase = 
