--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = d681f789b
+	base = b686add7c
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = d681f789b
