--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = b711ef4da
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 73cecca1e
+	trimbase = 
