--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = dcf5a4450
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = fe57b83e3
+	trimbase = 
