--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7dfaf3baa
-	base = c9ddba499
+	base = 707b64748
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = c9ddba499
