--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 0a18b42c2
 	base = 2f6c18f64
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 030c0fc32
+	trimbase = 
