--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/moveit_chomp_optimizer_adapter
-	previous = 
-	base = 37b683628
+	previous = 37b683628
+	base = c60d0b394
 	trim = 
 	trimbase = 
