--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = ad61cb64d
+	base = f92c5a396
 	trim = moveit
-	trimbase = 
+	trimbase = ad61cb64d
