--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 1c6f65a19
+	base = 1cd4c5863
 	trim = moveit_common
-	trimbase = 
+	trimbase = 1c6f65a19
