--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = f262316d2
+	base = ee505b7c0
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = f262316d2
