--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 748224b5c
+	base = d48d1d6ae
 	trim = moveit_core
-	trimbase = 
+	trimbase = 748224b5c
