--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 4e7ce4711
+	base = c9ae85e58
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 4e7ce4711
