--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 72bdc8e58
+	base = c301ec983
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = 72bdc8e58
