--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = a57ff49e3
+	base = 948b046da
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = a57ff49e3
