--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 8af4dfba5
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 5b316b4c6
+	trimbase = 
