--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = a95c0fed3
+	base = 433c62287
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	trimbase = 
+	trimbase = a95c0fed3
