--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 78fd0267c
+	base = 69f7301d0
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = 78fd0267c
