--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 73aa0cf82
+	base = 21ab577d6
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 73aa0cf82
