--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = a335917ce
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = f7417a4ed
+	trimbase = 
