--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = d496627a0
+	base = 5933fd36f
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = d496627a0
