--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 68c4d9a84
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 773562a7c
+	trimbase = 
