--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 008335144
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 81a02a445
+	trimbase = 
