--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 00a0647f9
+	base = aca9c0040
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 
+	trimbase = 00a0647f9
