--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 767749d15
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = d15a6b4d4
+	trimbase = 
