--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = a5191619a
+	base = 7596fc0d9
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = 
+	trimbase = a5191619a
