--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = da98f5b9d
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = a59dfa960
+	trimbase = 
