--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 3203b283a
+	base = bc1b0d66a
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = 3203b283a
