--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 13df9f5cd
+	base = ff0bae855
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = 13df9f5cd
