--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 0eaf86a45
+	base = 52e411b58
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = 0eaf86a45
