--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = f09631ba1
+	base = 8d8a8e2fa
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = f09631ba1
