--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = ad6909610
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 4156c0d51
+	trimbase = 
