--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 3db4a8db2
+	base = e92937d55
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 3db4a8db2
