--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 705d2311a
+	base = c9cca8336
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = 705d2311a
