--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 067f398cf
+	base = 2839f2229
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = 067f398cf
