--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = c968e3273
+	base = 1282f3979
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = c968e3273
