--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = dd7b5ecf8
+	base = 92be7f8aa
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = dd7b5ecf8
