--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 83e7245b8
+	base = efec85f46
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 83e7245b8
