--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 4bc621c1c
+	base = 1dd23652f
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 4bc621c1c
