--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = c60639086
+	base = 0aabf152d
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = c60639086
