--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 22339de6e
+	base = 6ca6e117e
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = 22339de6e
