--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 6ea11915f
+	base = fb62f41e8
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 6ea11915f
