--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = fd6f21782
+	base = 7220235d8
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = fd6f21782
