--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 57f122f74
+	base = 3b729f290
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = 57f122f74
