--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 5d2f397e2
+	base = 006ac11ce
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = 5d2f397e2
