--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = ed22c4ee6
+	base = 2495af993
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = ed22c4ee6
