--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 5f882fa6e
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 5e0cb3f0c
+	trimbase = 
