--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 282ec629c
+	base = 4b1b2d941
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 
+	trimbase = 282ec629c
