--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 70e1a3f34
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 90debc4d7
+	trimbase = 
