--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = b686add7c
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = d681f789b
+	trimbase = 
