--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 0eded65ad
+	base = f28ebd2d6
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = 0eded65ad
