--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 8ab88aa8c
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 90908f761
+	trimbase = 
