--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = eef481040
+	base = 9db88795c
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 
+	trimbase = eef481040
