--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = 707b64748
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = c9ddba499
+	trimbase = 
