--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 53044b5df
+	base = bec301fae
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 53044b5df
