--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 7dfaf3baa
 	base = cbf1597cd
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 124fa61ef
+	trimbase = 
