--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5d11451d7
-	base = 3962796f6
+	base = 79ce999f5
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = 
+	trimbase = 3962796f6
