--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 67bb33a90
+	base = a01b5263d
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 67bb33a90
