--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 3e96b4b0b
+	base = b48c31640
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = 3e96b4b0b
