--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = d32f9e306
+	base = 17b604b80
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = d32f9e306
