--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 7d1380670
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 7516d9862
+	trimbase = 
