--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 7d287cc12
+	base = a40e2103b
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 7d287cc12
