--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = f1d49deab
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = d280c3820
+	trimbase = 
