--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 1ee5f4ad7
+	base = 2e70f2786
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = 1ee5f4ad7
