--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 55fd1d504
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 6ac1043a4
+	trimbase = 
