--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = e50464b63
+	base = b5653ba66
 	trim = moveit_setup_assistant/moveit_setup_controllers
-	trimbase = 
+	trimbase = e50464b63
