--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = ccf46a166
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 8280ee8ab
+	trimbase = 
