--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 0117ade23
+	base = a09f37481
 	trim = moveit_setup_assistant/moveit_setup_framework
-	trimbase = 
+	trimbase = 0117ade23
