--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 0e13ecf2a
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = ed3113af7
+	trimbase = 
