--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 86c52661d
+	base = 06cf582f6
 	trim = moveit_setup_assistant/moveit_setup_app_plugins
-	trimbase = 
+	trimbase = 86c52661d
