--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 77df734ae
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = c2484813d
+	trimbase = 
