--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 7c51bf49f
+	base = b7b21101f
 	trim = moveit_setup_assistant/moveit_setup_core_plugins
-	trimbase = 
+	trimbase = 7c51bf49f
