--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 6e4615e25
 	trim = moveit_setup_assistant/moveit_setup_srdf_plugins
-	trimbase = ba6ba8351
+	trimbase = 
