--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 10fd4a804
+	base = 16ee7718c
 	trim = moveit_common
-	trimbase = 
+	trimbase = 10fd4a804
