--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = a6248f5fb
+	base = 77e632f5b
 	trim = moveit_ros/robot_interaction
-	trimbase = 
+	trimbase = a6248f5fb
