--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 6e6b87f52
+	base = d3ea0ed3e
 	trim = moveit_ros/move_group
-	trimbase = 
+	trimbase = 6e6b87f52
