--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 75728a79a
+	base = 2845aac61
 	trim = moveit_ros/perception
-	trimbase = 
+	trimbase = 75728a79a
