--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 700300f14
+	base = ecf914797
 	trim = moveit_ros/moveit_ros
-	trimbase = 
+	trimbase = 700300f14
