--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 88952fa74
+	base = 2deda64af
 	trim = moveit_ros/occupancy_map_monitor
-	trimbase = 
+	trimbase = 88952fa74
