--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 062c3cb01
+	base = d17dca635
 	trim = moveit_ros/warehouse
-	trimbase = 
+	trimbase = 062c3cb01
