--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = b71e793b4
+	base = 89c580a82
 	trim = moveit_ros/tests
-	trimbase = 
+	trimbase = b71e793b4
