--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 5a83d090a
+	base = 850316570
 	trim = moveit_ros/moveit_servo
-	trimbase = 
+	trimbase = 5a83d090a
