--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 37c3fcf41
+	base = 5dbaf3024
 	trim = moveit_ros/benchmarks
-	trimbase = 
+	trimbase = 37c3fcf41
