--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 00fb57b1a
-	trim = 
-	trimbase = 
+	base = 828c398ac
+	trim = moveit_ros/trajectory_cache
+	trimbase = 00fb57b1a
