--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 056a217fc
+	base = 32bdde2a9
 	trim = moveit_ros/hybrid_planning
-	trimbase = 
+	trimbase = 056a217fc
