--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 068560ac5
+	base = 4c9d29e38
 	trim = moveit_ros/planning_interface
-	trimbase = 
+	trimbase = 068560ac5
