--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 96cc239fb
+	base = 747fcfb20
 	trim = moveit_ros/planning
-	trimbase = 
+	trimbase = 96cc239fb
