--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = a9110daad
+	base = fcc054a37
 	trim = moveit_ros/visualization
-	trimbase = 
+	trimbase = a9110daad
