--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 3dd14a71c
+	base = 407ee287e
 	trim = moveit_core
-	trimbase = 
+	trimbase = 3dd14a71c
