--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 5f1fad2e4
+	base = 7481ebffa
 	trim = moveit_kinematics
-	trimbase = 
+	trimbase = 5f1fad2e4
