--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 8fb06642d
+	base = 4b1a19142
 	trim = moveit_runtime
-	trimbase = 
+	trimbase = 8fb06642d
