--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 2e907cd52
+	base = 6c7228c24
 	trim = moveit_planners/chomp/chomp_motion_planner
-	trimbase = 
+	trimbase = 2e907cd52
