--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = aa349f0e8
+	base = 0f61474cd
 	trim = moveit_planners/chomp/chomp_interface
-	trimbase = 
+	trimbase = aa349f0e8
