--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 41119d3d4
+	base = 668c16502
 	trim = moveit_planners/test_configs/prbt_pg70_support
-	trimbase = 
+	trimbase = 41119d3d4
