--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = e624f4898
 	trim = moveit_planners/test_configs/prbt_ikfast_manipulator_plugin
-	trimbase = 63d41de23
+	trimbase = 
