--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 95fb0bcdc
 	trim = moveit_planners/test_configs/prbt_moveit_config
-	trimbase = d5cb8b440
+	trimbase = 
