--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = a2b3c3216
+	base = 640372703
 	trim = moveit_planners/test_configs/prbt_support
-	trimbase = 
+	trimbase = a2b3c3216
