--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = daaf75126
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 04643a49e
+	trimbase = 
