--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 9d9ccc67c
+	base = a0e9bab2e
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 9d9ccc67c
