--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 650c6824e
+	base = e0610562a
 	trim = moveit_planners/ompl
-	trimbase = 
+	trimbase = 650c6824e
