--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = e129fb94e
 	base = 6a7145941
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 7adeb5c6f
+	trimbase = 
