--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = ca3e8c0f7
+	base = 70569078c
 	trim = moveit_planners/moveit_planners
-	trimbase = 
+	trimbase = ca3e8c0f7
