--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = bf3f8a9bf
+	base = 6761c0ef6
 	trim = moveit_planners/stomp
-	trimbase = 
+	trimbase = bf3f8a9bf
