--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = 73ea951f4
+	base = 20d6d0cb8
 	trim = moveit
-	trimbase = 
+	trimbase = 73ea951f4
