--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 293b025c4
-	base = c92b3c4e9
+	base = 8dee0069e
 	trim = moveit_py
-	trimbase = 
+	trimbase = c92b3c4e9
