--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/moveit_ros_trajectory_cache
-	previous = 
-	base = f9ba09f61
+	previous = f9ba09f61
+	base = b464a32ac
 	trim = 
 	trimbase = 
