--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/moveit_ros_trajectory_cache
-	previous = 
-	base = 3fde83c7b
+	previous = 3fde83c7b
+	base = c8be8e401
 	trim = 
 	trimbase = 
