--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/moveit_ros_trajectory_cache
-	previous = 
-	base = 828c398ac
+	previous = 828c398ac
+	base = eb20d1f9c
 	trim = 
 	trimbase = 
