--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/moveit_ros_trajectory_cache
-	previous = 
-	base = 183544ad9
+	previous = 183544ad9
+	base = 9225d0063
 	trim = 
 	trimbase = 
