--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd9369e9e
-	base = 8582815ab
+	base = bdc9a1687
 	trim = moveit_configs_utils
-	trimbase = 
+	trimbase = 8582815ab
