--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd9369e9e
-	base = 45366ac62
+	base = 747d0390e
 	trim = moveit_plugins/moveit_plugins
-	trimbase = 
+	trimbase = 45366ac62
