--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd9369e9e
-	base = 9ef8e1049
+	base = bc09b069b
 	trim = moveit_plugins/moveit_ros_control_interface
-	trimbase = 
+	trimbase = 9ef8e1049
