--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 293b025c4
 	base = a40e2103b
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 7d287cc12
+	trimbase = 
