--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd9369e9e
-	base = 18f053520
+	base = e73b89a02
 	trim = moveit_plugins/moveit_simple_controller_manager
-	trimbase = 
+	trimbase = 18f053520
