--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 293b025c4
 	base = 2e70f2786
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 1ee5f4ad7
+	trimbase = 
