--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dd9369e9e
-	base = 03f17aef5
+	base = 3bac660e9
 	trim = moveit_setup_assistant/moveit_setup_assistant
-	trimbase = 
+	trimbase = 03f17aef5
